content on page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | E-commerce product page</title>
-
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,12 +12,39 @@
   </style>
 </head>
 <body>
+  <header>
+    <h1>Sneakers</h1>
+    <nav>
+      <a>Collections</a>
+      <a>Men</a>
+      <a>Women</a>
+      <a>About</a>
+      <a>Contact
+      </nav>
+    </div>
+  </header>
+<!-- main should contain main content for the webpage -->
+    <main>
+      <div>
+        <img id='' src="./images/image-product-1.jpg" alt="YURRR" width=60px height=60px></img>
+        <img src="./images/image-product-3.jpg" alt="YURRR" width=60px height=60px></img>
+        <img src="./images/image-product-4.jpg" alt="YURRR" width=60px height=60px></img>
+        <img src="./images/image-product-2.jpg" alt="YURRR" width=60px height=60px></img>
+        <img src="./images/image-product-4.jpg" alt="YURRR" width=60px height=60px></img>
+      </div>
 
-  Collections
-  Men
-  Women
-  About
-  Contact
+      <div>
+        <h2 id="image-title">Fall Limited Sneakers</h2>
+        <p id="sneak-blerb"> These low-profile sneakers are your perfect casual wear camapnion.</p>
+        <p id="sneak-price">$125.00</p>
+        <div>50% off</div>
+        <button id="add-button">Add to Cart</button>
+
+      </div>
+    
+
+      
+    </main>
 
   Sneaker Company
 
@@ -36,9 +60,9 @@
   0
   Add to cart
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
