--- a/index.html
+++ b/index.html
@@ -9,17 +9,28 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+
+    #add-button {
+      background-color: orange;
+    }
     #large-image {
       width: 315px;
       height: 315px;
+      padding: 15px;
     }
-    /* .attribution {
-       font-size: 11px; text-align: center; 
-      }
+   .attribution {
+       font-size: 11px;  
+       position: absolute; bottom: 0; 
+        margin-left: auto;
+      margin-right: auto; 
+      left: 0;
+      right: 0; 
+      text-align: center; 
+      border: 1px solid black;
+      width: 30%;
+      } 
 
-    .attribution a { 
-      color: hsl(228, 45%, 44%);
-     } */
+   
 
      .lil-image {
        width: 10vh;
@@ -28,16 +39,18 @@
        margin: 2.5px;
      }
 
-     .left {
-      display: inline-block; 
-     }
-
-     .right {
-        display: inline-block;
-      }
+     /* .image-container {
+       float: left;
+     } */
 
      .header-container {
-       border-bottom: solid rgb(183, 59, 214) 5vh;
+       border-bottom: solid rgb(118, 114, 119) 0.4vh;
+     }
+
+     .increment{
+       padding: 15px;
+      font-size: 35px;
+      color: brown;
      }
 
      #nav {
@@ -53,6 +66,21 @@
        padding: 20px;
        top: -50px;
      }
+
+     .writing{
+       position: relative;
+       float: right;
+       width: 30%; top: -50vh;
+       left: -40vh;
+     }
+
+     #thumbnail1:hover, #thumbnail2:hover, #thumbnail3:hover, #thumbnail4:hover {
+  border: 0.5vh solid yellow;
+}
+
+#thumbnail1, #thumbnail2, #thumbnail3, #thumbnail4 {
+  border-radius: 10%;
+}
 
   </style>
 </head>
@@ -71,10 +99,12 @@
       <a class="a">About</a>
       <a class="a">Contact
     </nav>
-  </div>
-  </header>
-<!-- main should contain main content for the webpage -->
-    <main>
+    </div>
+    </header>
+      <!-- main should contain main content for the webpage -->
+         <main>
+
+      <section class="image-container">
       <div>
         <img id='large-image' src="./images/image-product-1.jpg" alt="YURRR" width=60px height=60px></img>
      </div>
@@ -84,33 +114,28 @@
         <img id="thumbnail3" class="lil-image" src="./images/image-product-2.jpg" alt="image-three"></img>
         <img id="thumbnail4" class="lil-image" src="./images/image-product-4.jpg" alt="image-four"></img>
       </div>
+    </section>
 
-      <div>
+      <div class="writing">
+      <p>Sneaker Company</p>
         <h2 id="image-title">Fall Limited Sneakers</h2>
-        <p id="sneak-blerb"> These low-profile sneakers are your perfect casual wear camapnion.</p>
+        <p id="sneak-blerb"> TThese low-profile sneakers are your perfect casual wear companion. Featuring a 
+          durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
         <p id="sneak-price">$125.00</p>
         <div>50% off</div>
+        <div>$250.00</div>
+      <div>
+        <span id="minus" class="increment">-</span>
+        <span id="counter" class="increment">0</span>
+        <span id="plus" class="increment">+</span>
         <button id="add-button">Add to Cart</button>
       </div>
+      </div>
     </main>
-
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-  
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </footer>
+    <footer class="attribution">
+     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Emmanuela</a>.
+    </footer>
 </body>
+
 </html>
