--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
       border: 1px solid black;
       width: 30%;
       } 
-
-   
+      .cd-cart__body {
+        position: relative;
+        top: -10vh;
+        right: -130vh;
+        width: 30%;
+      }
 
      .lil-image {
        width: 10vh;
@@ -74,12 +78,105 @@
        left: -40vh;
      }
 
+     .cd-cart__layout {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  overflow: hidden;
+  height: 72px;
+  width: 72px;
+  border-radius: var(--radius);
+  transition: height .4s .1s, width  .4s .1s, box-shadow .3s;
+  transition-timing-function: cubic-bezier(.67,.17,.32,.95);
+  background: var(--cd-color-3);
+  box-shadow: 0 4px 30px rgba(#000, .17);
+}
+
+
+.cd-cart__product--deleted { 
+  /* this class is added to an item when it is removed form the cart */
+  position: absolute;
+  left: 0;
+  width: 100%; 
+  opacity: 0;
+  animation: cd-item-slide-out .3s forwards;
+}
+
+@keyframes cd-item-slide-out {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(80px);
+    opacity: 0;
+  }
+}
+.cd-cart--open .cd-cart__layout {
+  height: 100%;
+  width: 100%;
+  transition-delay: 0s;
+}
+.cd-cart__trigger, 
+.cd-cart__content {
+  position: fixed;
+  bottom: 20px;
+  right: 5%;
+  transition: transform .2s;
+}
+
+.cd-cart--empty .cd-cart__trigger,
+.cd-cart__content { 
+ /* hide cart */
+  transform: translateY(150px);
+}
+     .cd-cart__layout {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  overflow: hidden;
+  height: 72px;
+  width: 72px;
+  border-radius: var(--radius);
+  transition: height .4s .1s, width  .4s .1s, box-shadow .3s;
+  transition-timing-function: cubic-bezier(.67,.17,.32,.95);
+  background: var(--cd-color-3);
+  box-shadow: 0 4px 30px rgba(#000, .17);
+}
+
+
+
+
+.cd-cart--open .cd-cart__layout {
+  height: 100%;
+  width: 100%;
+  transition-delay: 0s;
+}
+
+
      #thumbnail1:hover, #thumbnail2:hover, #thumbnail3:hover, #thumbnail4:hover {
   border: 0.5vh solid yellow;
 }
 
 #thumbnail1, #thumbnail2, #thumbnail3, #thumbnail4 {
   border-radius: 10%;
+}
+
+.lightbox-target {
+  position: fixed;
+  top: -100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  opacity: 0;
+  -webkit-transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+  overflow: hidden;
+  z-index:300;
 }
 
   </style>
@@ -92,6 +189,38 @@
     <h1>Sneakers</h1>
    </div>
 
+   <main class="cd-main container margin-top-xxl">
+    <div class="text-component text-center">
+      <h1>Add to Cart Interaction</h1>
+      <p class="flex flex-wrap flex-center flex-gap-xxs">
+        <a class="cd-article-link" href="https://codyhouse.co/gem/add-to-cart-interaction">📝 View Tutorial</a>
+        <a href="#0" class="cd-add-to-cart js-cd-add-to-cart" data-price="25.99">Add To Cart</a>
+      </p>
+    </div>
+  </main>
+  <div class="cd-cart__content">
+		<div class="cd-cart__layout">
+			<header class="cd-cart__header">
+				<h2>Cart</h2>
+				<span class="cd-cart__undo">Item removed. <a href="#0">Undo</a></span>
+			</header>
+			
+			<div class="cd-cart__body">
+				<ul>
+					<!-- products added to the cart will be inserted here using JavaScript -->
+				</ul>
+			</div>
+
+			<footer class="cd-cart__footer">
+				<a href="#0" class="cd-cart__checkout">
+          <em>Checkout - $<span>0</span>
+            <svg class="icon icon--sm" viewBox="0 0 24 24"><g fill="none" stroke="currentColor"><line stroke-width="2" stroke-linecap="round" stroke-linejoin="round" x1="3" y1="12" x2="21" y2="12"/><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="15,6 21,12 15,18 "/></g>
+            </svg>
+          </em>
+        </a>
+			</footer>
+		</div>
+	</div> <!-- .cd-cart__cont
     <nav id="nav">
       <a class="a">Collections</a>
       <a class="a">Men</a>
@@ -103,18 +232,24 @@
     </header>
       <!-- main should contain main content for the webpage -->
          <main>
-
-      <section class="image-container">
-      <div>
+      <section>
+        <a href = "javascript:showLightBox()" onMouseOut="javascript:stopShowLightBox()" style="cursor: pointer;">Click to start
+          Lightbox gallery</a>
+      <section class="lightbox-container">
+      <div class="image-container">
+        <a class="vlightbox" href="./images/image-product-1.jpg" title="2" id="firstImage">
         <img id='large-image' src="./images/image-product-1.jpg" alt="YURRR" width=60px height=60px></img>
+      </a>
      </div>
+    </section>
       <div>
         <img id="thumbnail1" class="lil-image" src="./images/image-product-3.jpg" alt="image-one"></img>
         <img id="thumbnail2" class="lil-image" src="./images/image-product-4.jpg" alt="image-two"></img>
         <img id="thumbnail3" class="lil-image" src="./images/image-product-2.jpg" alt="image-three"></img>
         <img id="thumbnail4" class="lil-image" src="./images/image-product-4.jpg" alt="image-four"></img>
       </div>
-    </section>
+    
+  </section>
 
       <div class="writing">
       <p>Sneaker Company</p>
